# ReStreamX

./: Makefile  README.md  go.mod
.github/workflows/: ci.yml
agent/cmd/restreamx-agent/: main.go
deploy/docker/: Dockerfile.agent  Dockerfile.ledger  Dockerfile.mysql  Dockerfile.router  docker-compose.yml  mysql-init.sql
deploy/scripts/: build_all.sh  down.sh  e2e.sh  logs.sh  up.sh
docs/: architecture.md  dev.md  ops.md  protocol.md
ledger/cmd/restreamx-ledgerd/: main.go
ledger/internal/raft/: quorum.go
ledger/internal/store/: store.go
mysql-plugin/: CMakeLists.txt
mysql-plugin/include/: restreamx_protocol.h
mysql-plugin/packaging/: restreamx.cnf.snippet  restreamx.install.sql  restreamx.uninstall.sql
mysql-plugin/packaging/debian/: control
mysql-plugin/src/: restreamx_lease.cc  restreamx_plugin.cc  restreamx_sysvars.cc
pkg/api/: client.go  types.go
router/cmd/restreamx-router/: main.go
